Fixed design bug on safari loader

--- a/src/Ono/MapBundle/Resources/public/css/style.css
+++ b/src/Ono/MapBundle/Resources/public/css/style.css
@@ -88,6 +88,7 @@ html, body {
       animation-duration: 2.1s;
       animation-timing-function: ease-in;
       animation-iteration-count: infinite;
+      z-index: 1;
       -webkit-transform: rotate(0deg);
       /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
       -ms-transform: rotate(0deg);
