--- a/src/Ono/MapBundle/Resources/public/sass/core/_loader.scss
+++ b/src/Ono/MapBundle/Resources/public/sass/core/_loader.scss
@@ -34,6 +34,7 @@
       animation-duration: 2.1s;
       animation-timing-function: ease-in;
       animation-iteration-count: infinite;
+      z-index: 1; 
       @include transform(rotate(0deg));
       &#exterieur {
         background-image: url(../img/logo/exterieur.png);
